@@ -1,0 +1,2 @@
+A fast, consistent tool for working with data frame like objects, both
+in memory and out of memory.
